k8s/production/app/service.app.yaml
apiVersion: v1
kind: Service
metadata:
  name: pdf-app
  namespace: pdf-filler
spec:
  selector:
    app: pdf-app
  ports:
    - protocol: TCP
      port: 5000
